--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,16 @@ on:
         type: string
         description: Required build arguments
 
+# Use qcs6490 sdk for compiling, as sdk is similar for all the targets
 env:
   SDK_NAME: poky-glibc-x86_64-core-image-base-armv8-2a-qcs6490-rb3gen2-core-kit-toolchain-5.2.sh
 
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on:
+      group: GHA-Audioreach-SelfHosted-RG
+      labels: [ self-hosted, audior-prd-u2204-x64-large-od-ephem ]
     strategy:
       fail-fast: false
     steps:
@@ -26,15 +29,18 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.ref }}
 
+      - name: Build docker Image
+        id: get-docker-image
+        uses: ./.github/actions/build_docker_image
+
       - name: Pull SDK sh file
         id: pull_sdk
         uses: ./.github/actions/aws-s3-exchanger
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          s3_bucket: qli-stg-kernel-gh-artifacts
+          s3_bucket: qli-prd-audior-gh-artifacts
           download_filename: ${{ env.SDK_NAME }}
           mode: download
+          location: Audioreach/meta-ar/post_merge_build
 
       - name: Setup Directory Structure
         run: mkdir -p install/tmp
@@ -47,20 +53,23 @@ jobs:
           echo "./install" | ./${{ env.SDK_NAME }}
           echo "SDK Script ran successfully"
 
-      - name: Get UID and GID
-        id: ids
+      - name: Extract Kernel Version
+        id: extract_kernel_version
+        shell: bash
         run: |
-          echo "uid=$(id -u)" >> $GITHUB_OUTPUT
-          echo "gid=$(id -g)" >> $GITHUB_OUTPUT
+          echo "Extracting Kernel Version"
+          kernel_version=$(ls ${{ github.workspace }}/install/sysroots/armv8-2a-poky-linux/usr/lib/modules/ | sort -V | tail -n 1)
+          echo "Kernel Version: $kernel_version"
+          echo "KERNEL_VERSION=${kernel_version}" >> "$GITHUB_OUTPUT"
 
       - name: Build
         id: build
         uses: ./.github/actions/build
         with:
-          uid: ${{ steps.ids.outputs.uid }}
-          gid: ${{ steps.ids.outputs.gid }}
+          docker_image: ${{ steps.get-docker-image.outputs.image_name }}
         env:
           BUILD_ARGS: ${{ inputs.build_args }}
+          KERNEL_VERSION: ${{ steps.extract_kernel_version.outputs.KERNEL_VERSION }}
 
       - name: Clean Up Workspace
         if: always() 
